# avcpp_example

./: CMakeLists.txt  README.md
cmake/: find_ffmpeg_linux.cmake  find_ffmpeg_windows.cmake
example/: video_reader.cpp
src/common/: log.cpp  log.h  memory_utils.cpp  memory_utils.h  non_copyable.h
src/config/: metadata_config.cpp  metadata_config.h  reader_config.cpp  reader_config.h
src/metadata/: base_metadata.cpp  base_metadata.h  frame_metadata.cpp  frame_metadata.h
src/reader/: base_reader.h  ffmpeg_reader.cpp  ffmpeg_reader.h
